<resources>
  <string name="app_name" translatable="false">Paint Booth (Gerrit)</string>
  <string name="current_activity_service_description">Shows the current activity</string>
  <string name="preferences_screen_title">Settings</string>
  <string name="basic_preferences">Basic attributes</string>
  <string name="title_basic_preference">Preference</string>
  <string name="summary_basic_preference">Simple preference with no special attributes</string>
  <string name="title_stylish_preference"><b>Very</b> <i>stylish</i> <u>preference</u></string>
  <string name="summary_stylish_preference">Define style tags such as &lt;b&gt; in a string resource to customize a preference\'s text</string>
  <string name="title_icon_preference">Icon preference</string>
  <string name="summary_icon_preference">Define a drawable to display it at the start of the preference</string>
  <string name="title_single_line_title_preference">Single line title preference - no matter how long the title is it will never wrap to multiple lines</string>
  <string name="summary_single_line_title_preference">This title will be ellipsized instead of wrapping to another line</string>
  <string name="title_single_line_no_summary">Single line preference - no summary</string>
  <string name="widgets">Widgets</string>
  <string name="title_twoaction_preference">TwoAction preference</string>
  <string name="summary_twoaction_preference">A widget should be visible on the right</string>
  <string name="summary_deprecated_twoaction_preference">The deprecated version of TwoActionPreference</string>
  <string name="title_checkbox_preference">Checkbox preference</string>
  <string name="summary_checkbox_preference">Tap anywhere in this preference to toggle state</string>
  <string name="title_switch_preference">Switch preference</string>
  <string name="summary_switch_preference">Tap anywhere in this preference to toggle state</string>
  <string name="title_dropdown_preference">Dropdown preference</string>
  <string name="title_seekbar_preference">Seekbar preference</string>
  <string name="summary_seekbar_preference">Seekbar summary</string>
  <string name="dialogs">Dialogs</string>
  <string name="title_edittext_preference">EditText preference</string>
  <string name="dialog_title_edittext_preference">This title can be changed!</string>
  <string name="title_list_preference">List preference</string>
  <string name="dialog_title_list_preference">Choose one option!</string>
  <string name="title_multi_list_preference">Multi-select list preference</string>
  <string name="summary_multi_list_preference">Shows a dialog with multiple choice options</string>
  <string name="dialog_title_multi_list_preference">Choose some options!</string>
  <string name="advanced_attributes">Advanced attributes</string>
  <string name="title_expandable_preference">Expandable preference group</string>
  <string name="summary_expandable_preference">This group shows one item and collapses the rest into the advanced button below</string>
  <string name="title_intent_preference">Intent preference</string>
  <string name="summary_intent_preference">Launches an intent when pressed</string>
  <string name="title_parent_preference">Parent preference</string>
  <string name="summary_parent_preference">Toggling this preference will change the enabled state of the preference below</string>
  <string name="title_child_preference">Child preference</string>
  <string name="summary_child_preference">The enabled state of this preference is controlled by the preference above</string>
  <string name="title_toggle_summary_preference">Variable summary preference</string>
  <string name="summary_on_toggle_summary_preference">On! :) - the summary of this preference changes depending on its state</string>
  <string name="summary_off_toggle_summary_preference">Off! :( - the summary of this preference changes depending on its state</string>
  <string name="title_copyable_preference">Copyable preference</string>
  <string name="summary_copyable_preference">Long press on this preference to copy its summary</string>
  <string name="advanced_preference">Advanced</string>
  <string name="intent_preference">Intent preference</string>
  <string name="toolbar_change_title">Change title</string>
  <string name="toolbar_set_xml_resource">MenuItem: Set to XML source</string>
  <string name="toolbar_add_icon">MenuItem: Add Icon</string>
  <string name="toolbar_add_untined_icon">MenuItem: Add untinted icon</string>
  <string name="toolbar_add_overflow">Overflow MenuItem: Add Simple</string>
  <string name="toolbar_add_overflow_switch">Overflow MenuItem: Add switchable</string>
  <string name="toolbar_add_icon_text_overflow">Overflow MenuItem: Add icon and text</string>
  <string name="toolbar_add_switch">MenuItem: Add Switch</string>
  <string name="toolbar_add_text">MenuItem: Add text</string>
  <string name="toolbar_add_icon_text">MenuItem: Add icon and text</string>
  <string name="toolbar_add_bordered_text">MenuItem: Add bordered text</string>
  <string name="toolbar_add_bordered_icon_text">MenuItem: Add bordered icon and text</string>
  <string name="toolbar_add_untinted_icon_and_text">MenuItem: Add untinted icon and text</string>
  <string name="toolbar_add_activatable">MenuItem: Add activatable</string>
  <string name="toolbar_add_morphing">MenuItem: Add morphing</string>
  <string name="toolbar_toggle_visibility">MenuItem: Toggle Visibility</string>
  <string name="toolbar_toggle_enable">MenuItem: Toggle Enabled</string>
  <string name="toolbar_toggle_perform_click">MenuItem: Call PerformClick()</string>
  <string name="toolbar_toggle_icon">MenuItem: Toggle Icon</string>
  <string name="toolbar_toggle_show_while_search">MenuItem: Toggle show while searching</string>
  <string name="toolbar_cycle_nav_button">Cycle nav button mode</string>
  <string name="toolbar_toggle_logo">Toggle logo</string>
  <string name="toolbar_cycle_state">Cycle state</string>
  <string name="toolbar_toggle_search_hint">Toggle search hint</string>
  <string name="toolbar_toggle_background">Toggle background</string>
  <string name="toolbar_add_tab">Add tab</string>
  <string name="toolbar_add_tab_with_custom_text">Add tab with custom text</string>
  <string name="toolbar_show_tabs_in_subpage">Toggle showing tabs in subpages</string>
  <string name="toolbar_toggle_search_icon">Toggle search icon</string>
  <string name="dialog_show_dialog">Show Dialog</string>
  <string name="dialog_show_dialog_icon">Show Dialog with icon</string>
  <string name="dialog_show_dialog_edit">Show Dialog with edit text box</string>
  <string name="dialog_show_dialog_only_positive">Show Dialog with only positive button</string>
  <string name="dialog_show_dialog_no_button">Show Dialog With no button provided</string>
  <string name="dialog_show_dialog_checkbox">Show Dialog With Checkbox</string>
  <string name="dialog_show_dialog_no_title">Show Dialog without title</string>
  <string name="dialog_show_toast">Show Toast</string>
  <string name="dialog_show_subtitle">Show Dialog with title and subtitle</string>
  <string name="dialog_show_subtitle_and_icon">Show Dialog with title, subtitle, and icon</string>
  <string name="dialog_show_long_subtitle_and_icon">Show Dialog with a long title, subtitle, and icon</string>
  <string name="dialog_show_single_choice">Show with single choice items</string>
  <string name="dialog_show_list_items_without_default_button">Show with single choice items and no default button</string>
  <string name="dialog_show_permission_dialog">Show permission dialog</string>
  <string name="dialog_show_multi_permission_dialog">Show multiple permissions dialog</string>
  <string name="dialog_show_foreground_permission_dialog">Show foreground permission dialog</string>
  <string name="dialog_show_background_permission_dialog">Show background permission dialog</string>
  <string name="widget_checkbox_text">I\'m a check box</string>
  <string name="widget_switch_text">I\'m a switch</string>
</resources>