<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/preferences_screen_title">

    <PreferenceCategory
        android:title="@string/basic_preferences">

        <Preference
            android:key="preference"
            android:summary="@string/summary_basic_preference"
            android:title="@string/title_basic_preference"/>

        <Preference
            android:key="stylized"
            android:dependency="preference"
            android:summary="@string/summary_stylish_preference"
            android:title="@string/title_stylish_preference"/>

        <Preference
            android:icon="@drawable/ic_settings_wifi"
            android:key="icon"
            android:summary="@string/summary_icon_preference"
            android:title="@string/title_icon_preference"/>

        <Preference
            android:key="single_line_title"
            android:summary="@string/summary_single_line_title_preference"
            android:title="@string/title_single_line_title_preference"
            app:singleLineTitle="true"/>

        <Preference
            android:key="single_line_no_summary"
            android:title="@string/title_single_line_no_summary"
            app:singleLineTitle="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/widgets">

        <CheckBoxPreference
            android:key="checkbox"
            android:summary="@string/summary_checkbox_preference"
            android:title="@string/title_checkbox_preference"/>

        <DropDownPreference
            android:entries="@array/entries"
            android:entryValues="@array/entry_values"
            android:key="dropdown"
            android:title="@string/title_dropdown_preference"
            app:useSimpleSummaryProvider="true"/>

        <SeekBarPreference
            android:defaultValue="5"
            android:key="seekbar"
            android:max="10"
            android:title="@string/title_seekbar_preference"/>

        <SwitchPreference
            android:key="switch"
            android:summary="@string/summary_switch_preference"
            android:title="@string/title_switch_preference"/>

        <com.android.car.ui.preference.CarUiTwoActionPreference
            android:key="twoaction"
            android:summary="@string/summary_deprecated_twoaction_preference"
            android:title="@string/title_twoaction_preference"
            android:widgetLayout="@layout/details_preference_widget"/>

        <com.android.car.ui.preference.CarUiTwoActionTextPreference
            android:key="twoactiontext"
            android:summary="@string/summary_twoaction_preference"
            android:title="@string/title_twoaction_preference"
            app:secondaryActionText="Secondary action"/>
        <com.android.car.ui.preference.CarUiTwoActionTextPreference
            android:key="twoactiontextborderless"
            android:icon="@drawable/ic_settings_wifi"
            android:summary="@string/summary_twoaction_preference"
            android:title="@string/title_twoaction_preference"
            app:secondaryActionStyle="borderless"
            app:secondaryActionText="Secondary action"/>
        <com.android.car.ui.preference.CarUiTwoActionIconPreference
            android:key="twoactionicon"
            android:icon="@drawable/ic_settings_wifi"
            android:summary="@string/summary_twoaction_preference"
            android:title="@string/title_twoaction_preference"
            app:secondaryActionIcon="@drawable/ic_launcher"/>
        <com.android.car.ui.preference.CarUiTwoActionSwitchPreference
            android:key="twoactionswitch"
            android:icon="@drawable/ic_settings_wifi"
            android:summary="@string/summary_twoaction_preference"
            android:title="@string/title_twoaction_preference"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dialogs">

        <EditTextPreference
            android:dialogTitle="@string/dialog_title_edittext_preference"
            android:key="edittext"
            android:title="@string/title_edittext_preference"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            android:dialogTitle="@string/dialog_title_list_preference"
            android:entries="@array/entries"
            android:entryValues="@array/entry_values"
            android:key="list"
            android:title="@string/title_list_preference"
            app:useSimpleSummaryProvider="true"/>

        <MultiSelectListPreference
            android:dialogTitle="@string/dialog_title_multi_list_preference"
            android:entries="@array/entries"
            android:entryValues="@array/entry_values"
            android:key="multi_select_list"
            android:summary="@string/summary_multi_list_preference"
            android:title="@string/title_multi_list_preference"/>

        <com.android.car.ui.preference.CarUiSeekBarDialogPreference
            android:dialogTitle="Seekbar Dialog"
            android:key="seekbarDialog"
            android:summary="@string/summary_seekbar_preference"
            android:title="@string/title_seekbar_preference"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/advanced_preference"
        android:title="@string/advanced_attributes"
        app:initialExpandedChildrenCount="1">

        <Preference
            android:key="expandable"
            android:summary="@string/summary_expandable_preference"
            android:title="@string/title_expandable_preference"/>

        <Preference
            android:summary="@string/summary_intent_preference"
            android:title="@string/title_intent_preference">

            <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.android.com"/>

        </Preference>

        <Preference
            android:key="copyable"
            android:selectable="false"
            android:summary="@string/summary_copyable_preference"
            android:title="@string/title_copyable_preference"
            app:enableCopying="true"/>

        <SwitchPreference
            android:dependency="parent"
            android:key="child"
            android:summary="@string/summary_child_preference"
            android:title="@string/title_child_preference"/>

        <SwitchPreference
            android:key="toggle_summary"
            android:summaryOff="@string/summary_off_toggle_summary_preference"
            android:summaryOn="@string/summary_on_toggle_summary_preference"
            android:title="@string/title_toggle_summary_preference"/>

        <SwitchPreference
            android:key="parent"
            android:summary="@string/summary_parent_preference"
            android:title="@string/title_parent_preference"/>
    </PreferenceCategory>

</PreferenceScreen>
